# paved-road

./: .gitignore  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  demo.yml  preview.yml  release.yml  reusable-service-ci.yml
aiops/ci-triage/: README.md  pyproject.toml
aiops/ci-triage/src/ci_triage/: github.py  llm.py  main.py  rules.py
aiops/ci-triage/tests/: test_rules.py
catalog/: README.md
deploy/argocd/: root-app.yaml
deploy/argocd/apps/: app-kube-prometheus-stack.yaml  app-observability-config.yaml  app-platform-system.yaml  applicationset-previews.yaml  applicationset-services.yaml
deploy/kustomize/platform/: kustomization.yaml  preview-janitor-cronjob.yaml  preview-janitor-rbac.yaml
deploy/kustomize/services/fx-rates/base/: deployment.yaml  kustomization.yaml
docs/: backstage-migration.md  capabilities.md  platform-as-product.md  slo.md
docs/adr/: 0005-build-once-promote-by-digest.md  0009-previews-applicationset-ttl-janitor.md
docs/runbooks/: rb-001-preview-not-collected.md  rb-003-rollback.md
infra/local/: k3d-config.yaml  versions.env
infra/terraform/envs/prod/gcp/: variables.tf
infra/terraform/envs/staging/aws/: variables.tf
observability/alerts/: platform.yaml  slo-burn-rate.yaml
observability/dashboards/: platform-overview.json  service-golden-signals.json
platform-cli/: Dockerfile  README.md  pyproject.toml
platform-cli/src/platform_cli/: __init__.py  main.py  preview.py  render.py  scaffold.py
platform-cli/tests/: conftest.py  test_catalog.py  test_preview_gc.py  test_scaffold_golden.py
policy/kubernetes/: workloads.rego  workloads_test.rego
scripts/: bootstrap.sh  demo.sh  deploy-local.sh  preview-sim.sh
services/fx-rates/: .copier-answers.yml
services/fx-rates/src/app/: rates.py
services/fx-rates/tests/: test_rates.py
(+30 files in other folders)
