[project]
name = "paved-road-platform-cli"
version = "0.1.0"
description = "Golden-path CLI for the paved-road reference platform: scaffold services, validate the catalog, manage preview environments."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Adrián Cortés" }]
dependencies = [
    "typer>=0.16",
    "rich>=13.7",
    "pydantic>=2.9",
    "copier>=9.4",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.scripts]
platform = "platform_cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: calling typer.Option in parameter defaults is Typer's documented API.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
