[project]
name = "ci-triage"
version = "0.1.0"
description = "Classify CI failures before a human reads raw logs: deterministic rules first, LLM-assisted summaries when configured."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "typer>=0.16",
]

[project.scripts]
ci-triage = "ci_triage.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ci_triage"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
